2001-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/scanner-smi.l: Martin Schulz noticed a problem with
	the use of the isspace() macro on Solaris. Thanks.

2001-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/PINT-MIB: added (RFC 3055).

2001-02-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/IPV6-MLD-MIB: added (RFC 3019).

2001-01-26  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Martin Schulz fixed setting of UNITS
	of OBJECT-TYPEs. Thanks!

2001-01-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.13.tar.gz: released version 0.2.13.

	* tools/dump-netsnmp.c: Juergen added support for manager stub
	code.

2001-01-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Null pointer fixes from Juergen.

	* tools/dump-perl.c: Martin Schulz <schulz@videotron.ca> contributed
	a perl driver, based on the python driver. It maps each and every
	piece of information to a string, even dates and and numerical
	values. However, maybe it is useful to some people.

2000-12-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Some well-known SMI identifiers imported
	from RFC* modules are now suggested to be imported from SMIv2
	modules, where appropriate. This modifies an earlier patch
	from Bill.

2000-12-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-identifers.c: Juergen made dump-lines.c obsolete
	by adding two options to the `identifiers' format.

2000-12-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Bill contributed a `lines' dump format to
	print line numbers of definitions. He contributed also a patch
	that allows the `identifiers' format to report identifiers with
	OID definitions that could not be resolved (as in {mib-2 xxx}).

	* lib/parser-smi.h: Bill added special handling for unintentionally
	terminated comments and hints on definitions that could be imported
	from more recent modules.

2000-12-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
